k8s/staging/data-fetcher.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-fetcher
  namespace: trading-system-staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-fetcher
  template:
    metadata:
      labels:
        app: data-fetcher
    spec:
      imagePullSecrets:
        - name: ecr-secret
      containers:
        - name: data-fetcher
          image: 491325670398.dkr.ecr.eu-central-1.amazonaws.com/trading-data-fetcher:da498e64e44c7b00d499ecbfd30a29a208261249
