k8s/staging/executor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: executor
  namespace: trading-system-staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: executor
  template:
    metadata:
      labels:
        app: executor
    spec:
      imagePullSecrets:
        - name: ecr-secret
      containers:
        - name: executor
          image: 491325670398.dkr.ecr.eu-central-1.amazonaws.com/trading-executor:1d9770115bdcb15aa0d881d9b3959e3e8a414c66
