k8s/staging/strategy-engine.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: strategy-engine
  namespace: trading-system-staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: strategy-engine
  template:
    metadata:
      labels:
        app: strategy-engine
    spec:
      imagePullSecrets:
        - name: ecr-secret
      containers:
        - name: strategy-engine
          image: 491325670398.dkr.ecr.eu-central-1.amazonaws.com/trading-strategy-engine:da498e64e44c7b00d499ecbfd30a29a208261249
