k8s/staging/dashboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard
  namespace: trading-system-staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard
  template:
    metadata:
      labels:
        app: dashboard
    spec:
      imagePullSecrets:
        - name: ecr-secret
      containers:
        - name: dashboard
          image: 491325670398.dkr.ecr.eu-central-1.amazonaws.com/trading-dashboard:1d9770115bdcb15aa0d881d9b3959e3e8a414c66
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  namespace: trading-system-staging
spec:
  type: LoadBalancer
  selector:
    app: dashboard
  ports:
    - port: 80
      targetPort: 8000
